--- a/definitions.yaml
+++ b/definitions.yaml
@@ -601,12 +601,16 @@ document:
   properties:
     uuid:
       type: string
-      description: >-
-        Уникальный идентификатор документа в платформе Эвотор, в формате uuid4. Уникален в рамках магазина (`storeUuid`).
+      description: |
+        Идентификатор документа в Облаке Эвотор, уникальный в рамках магазина `storeUuid`.
+
+        Формат – `uuid4`.
       pattern: >-
         ^[0-9a-f]{8}-[0-9a-f]{4}-[1-5][0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}$
+      example: 20170222-d58c-40e0-8051-b53adff38860
     types:
       type: string
+      description: Тип документа.
       enum:
         - SELL
         - PAYBACK
@@ -632,6 +636,7 @@ transaction:
   properties:
     type:
       type: string
+      description: Транзакция.
       enum:
         - DISCOUNT_DOCUMENT
         - DISCOUNT_POSITION
