schemas and extras corrected

--- a/definitions.yaml
+++ b/definitions.yaml
@@ -352,13 +352,21 @@ productSchema:
     uuid:
       type: string
       description: |
-        Идентификатор схемы в магазине (uuid4). Не может содержать пустую строку или принимать значение `null`.
+        Идентификатор схемы в магазине
+
+        Формат – `uuid4`.
+
+        Не может быть `null` или пустой строкой.
       pattern: |
         ^[0-9a-f]{8}-[0-9a-f]{4}-[1-5][0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}$
     appId:
       type: string
       description: |
-        Идентификатор приложения в Эвоторе (uuid4). Не может быть `null` или пустой строкой.
+        Идентификатор приложения в Облаке Эвотор.
+
+        Формат – `uuid4`.
+
+        Не может быть `null` или пустой строкой.
       pattern: |
           ^[0-9a-f]{8}-[0-9a-f]{4}-[1-5][0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}$
     items:
@@ -373,19 +381,22 @@ items:
   properties:
     title:
       type: string
-      description: Заголовок поля.
+      description: Имя поля.
     editable:
       type: boolean
-      description: Флажок, который включает или выключает возможность редактировать поле.
+      description: Указывает можно редактировать поле или нет.
       example: false
     uuid:
       type: string
-      description: Идентификатор поля в формате uuid4.
+      description: |
+        Идентификатор поля.
+
+        Формат – `uuid4`.
     type:
       type: string
       description: |
           Определяет набор данных, которые содержит дополнительное поле. Может принимать значения:
-            * `TEXT_FIELD` – текстовое поле
+            * `TEXT_FIELD` – текстовое поле.
             * `DICTIONARY_FIELD` – словарь. Позволяет выбрать одно или несколько предустановленных значений.
 
 TEXT_FIELD:
@@ -411,7 +422,7 @@ DICTIONARY_FIELD:
         multiple:
           type: boolean
           description: |
-              Включает или выключает возможность выбора нескольких элементов раскрывающегося списка.
+              Указывает можно выбрать несколько элементов раскрывающегося списка или нет.
           example: false
         items:
           type: array
@@ -426,7 +437,10 @@ DICTIONARY_FIELD:
                 description: Название элемента списка.
               value:
                 type: string
-                description: uuid элемента.
+                description: |
+                   Идентификатор элемента.
+
+                   Формат – `uuid4`.
 
 productExtras:
   type: array
@@ -436,24 +450,39 @@ productExtras:
       uuid:
         type: string
         description: |
-          Идентификатор дополнительного поля (uuid4). Не может быть `null` или пустой строкой.
+          Идентификатор дополнительного поля.
+
+          Формат – `uuid4`.
+
+          Не может быть `null` или пустой строкой.
         pattern: >-
           ^[0-9a-f]{8}-[0-9a-f]{4}-[1-5][0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}$
+        example: 1eaca77f-7890-5078-a726-83c892348acd
       appId:
         type: string
         description: |
-          Идентификатор приложения в Эвоторе (uuid4). Не может быть `null` или пустой строкой.
+          Идентификатор приложения в Облаке Эвотор.
+
+          Формат – `uuid4`.
+
+          Не может быть `null` или пустой строкой.
         pattern: |
           ^[0-9a-f]{8}-[0-9a-f]{4}-[1-5][0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}$
+        example: 1eaca77f-1579-5078-a123-83c892348acd
       key:
         type: object
         properties:
           uuid:
             type: string
             description: |
-              Идентификатор товара, связанного с дополнительным полем (uuid4). Не может быть `null` или пустой строкой.
+              Идентификатор товара, связанного с дополнительным полем.
+
+              Формат – `uuid4`.
+
+              Не может быть `null` или пустой строкой.
             pattern: >-
               ^[0-9a-f]{8}-[0-9a-f]{4}-[1-5][0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}$
+            example: 1eaca77f-5263-5078-a123-83c892348acd
       scheme:
         type: object
         description: |
@@ -464,12 +493,18 @@ productExtras:
           value:
             type: string
             description: Значение, которое будет отображаться в элеменменте управления.
+            example: Элемент управления
           fieldId:
             type: string
             description: |
-              Идентификатор поля из схемы (uuid4). Не может быть `null` или пустой строкой.
+              Идентификатор поля из схемы.
+
+              Формат – `uuid4`.
+
+              Не может быть `null` или пустой строкой.
             pattern: >-
               ^[0-9a-f]{8}-[0-9a-f]{4}-[1-5][0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}$
+            example: 1eaca77f-1579-5869-a123-83c892348acd
       data:
         type: object
         description: Валидный JSON-объект, который содержит данные, отображаемые с помощью JavaScript в интерфейсе смарт-терминала.
