--- a/paths.yaml
+++ b/paths.yaml
@@ -903,16 +903,13 @@
       - Вебхуки-уведомления
     summary: 'События подписки'
     description: |
-       Связанные с подпиской пользователей события, которые облако Эвотор передаёт в сторонний сервис. Облако выполняет попытки передать события в течение трёх суток, до тех пор пока не будет получен ответ об успешной доставке сообщения (200ОК). Интервал повторной отправки события около одной минуты.
+       Связанные с биллингом события, которые облако Эвотор передаёт в сторонний сервис.
+
+       Облако выполняет попытки передать события в течение трёх суток, до тех пор пока не будет получен ответ об успешной доставке сообщения (200ОК).
+
+       Интервал повторной отправки события около одной минуты.
     parameters:
-      - name: Authorization
-        in: header
-        description: |
-          "Авторизация запросов облака Эвотор в стороннем сервисе. Содержит токен стороннего сервиса для Bearer-авторизации."
-        required: true
-        type: string
-        pattern: '^(Bearer) [a-zA-Z0-9_=-]+$'
-        example: Bearer evotor_token
+      - $ref: './parameters.yaml#/clientAuth'
       - in: body
         name: body
         description: Содержимое запроса меняется в зависимости от события.
