--- a/paths.yaml
+++ b/paths.yaml
@@ -726,19 +726,31 @@
               properties:
                 id:
                   type: string
-                  description: Идентификатор чека в формате `uuid4`.
+                  description: |
+                    Идентификатор чека.
+
+                    Формат – `uuid4`.
                   pattern:
                 deviceId:
                   type: string
-                  description: Идентификатор устройства в формате `uuid4`. Чувствителен к регистру символов.
+                  description: |
+                    Идентификатор устройства в Облаке Эвотор.
+
+                    Формат – `uuid4`. Регистрозависимый.
                   pattern:
                 storeId:
                   type: string
-                  description: Идентификатор магазина в формате `uuid4`.
+                  description: |
+                    Идентификатор магазина
+
+                    Формат – `uuid4`.
                   pattern:
                 dateTime:
                   type: number
-                  description: Дата и время в формате создания чека. [В соответствовии с ISO 8601](https://en.wikipedia.org/wiki/ISO_8601#Time_offsets_from_UTC)
+                  description: |
+                    Дата и время в формате создания чека.
+
+                    [В соответствовии с ISO 8601](https://en.wikipedia.org/wiki/ISO_8601#Time_offsets_from_UTC)
                   example: "2017-06-07T12:55:18Z"
                 type:
                   type: string
@@ -764,7 +776,7 @@
                     - OTHER
                 infoCheck:
                   type: boolean
-                  description: Признак того, является чек информационным (`true`) или фискальным (`false`).
+                  description: Указывает фискальный документ или нет.
                 egais:
                   type: boolean
                   description: Указывает относится документ к ЕГАИС или нет.
@@ -776,10 +788,13 @@
                     properties:
                       id:
                         type: string
-                        description: Идентификатор товара/услуги в формате `uuid4`.
+                        description: |
+                          Идентификатор товара.
+
+                          Формат – `uuid4`.
                       name:
                         type: string
-                        description: Наименование товара/услуги.
+                        description: Название товара.
                       itemType:
                         type: string
                         description: |
@@ -795,8 +810,14 @@
                           - SERVICE
                       measureName:
                         type: string
-                        description: >-
-                          Единица измерения для товара, не может быть`null`. Товароучётные системы могут задавать свои единицы измерения, например, "пара", "палета", "карат" и т.д.. Для групп товаров указывается "";
+                        description: |
+                          Единица измерения для товара.
+
+                          >Товароучётные системы могут задавать свои единицы измерения, например, "пара", "палета", "карат" и т.д..
+
+                          Для групп товаров указывается "".
+
+                          Не может быть`null`
                         enum:
                           - ''
                           - шт
@@ -812,16 +833,16 @@
                           - дроб
                       quantity:
                         type: number
-                        description: Количество товара
+                        description: Количество товара.
                       price:
                         type: number
-                        description: Цена продажи товара.
+                        description: Отпускная цена товара.
                       costPrice:
                         type: number
-                        description: Цена закупки товара.
+                        description: Закупочная цена товара.
                       sumPrice:
                         type: number
-                        description: Общая цена товара/услуги.
+                        description: Общая цена товара.
                       tax:
                         type: number
                         description: Сумма налога на товар.
@@ -839,11 +860,13 @@
                   description: Общая сумма скидки.
                 totalAmount:
                   type: number
-                  description: Общая сумма чека
+                  description: Общая сумма чека.
                 extras:
                   type: object
                   description: |
-                    Дополнительные поля. Например, поля пользователей программ лояльности. Поля хранятся в контексте приложения. При отправке в сторонний сервис, Облако Эвотор фильтрует поля таким образом, что сторонний сервис получает только те поля которые были созданы соответствующим приложением, установленным на терминале.
+                    Дополнительные поля. Например, поля пользователей программ лояльности.
+
+                    Поля хранятся в контексте приложения. При отправке в сторонний сервис, Облако Эвотор фильтрует поля таким образом, что сторонний сервис получает только те поля которые были созданы соответствующим приложением, установленным на терминале.
     responses:
       '200':
         description: OK
