--- a/definitions.yaml
+++ b/definitions.yaml
@@ -1,48 +1,36 @@
 registerFormData:
   type: object
   required:
-    - userUuid
+    - userId
   properties:
-    userUuid:
-      -$ref: '#/userId'
-      type: string
-      description: |
-        **Важно:** Параметр `userUuid` к августу будет заменён на параметр `userId`. Используйте новое наименование параметра.
-
-        Идентификатор пользователя в облаке Эвотор.
-      pattern: '^[0-9]{2}-[0-9]{15}$'
-      example: 01-000000000000001
+    userId:
+      $ref: '#/userId'
     customField:
       type: string
       description: |
-        Помимо `userUuid` могут передаваться и другие поля, значения которых пользователь указывает в интерфейсе [магазина приложений](https://market.evotor.ru/) при регистрации учётной записи в стороннем сервисе. Создавайте необходимые дополнительные поля в разделе **Интеграция**, на [сайте разработчиков](https://dev.evotor.ru).
+        Помимо `userId` могут передаваться и другие поля, значения которых пользователь указывает в интерфейсе [магазина приложений](https://market.evotor.ru/) при регистрации учётной записи в стороннем сервисе. Создавайте необходимые дополнительные поля в разделе **Интеграция**, на [сайте разработчиков](https://dev.evotor.ru).
 
         Облако Эвотор передаёт дополнительные поля в сторонний сервис во время [авторизации](https://api.evotor.ru/docs/#tag/Vebhuki-zaprosy%2Fpaths%2F~1partner.ru~1api~1v1~1user~1verify%2Fpost) или [регистрации](https://api.evotor.ru/docs/#tag/Vebhuki-zaprosy%2Fpaths%2F~1partner.ru~1api~1v1~1user~1create%2Fpost) пользователя.
 
         Не добавляйте поля для данных, которые пользователь может указать в Личном кабинете, после установки приложения.
 
-      example: Пример значения
+      example: Дополнительные данные о пользователе
 
 
 authorizeFormData:
   type: object
   required:
-    - userUuid
+    - userId
   properties:
-    userUuid:
-      type: string
-      description: |
-        **Важно:** Параметр `userUuid` к августу будет заменён на параметр `userId`. Используйте новое наименование параметра.
-
-        Идентификатор пользователя в облаке Эвотор.
-      pattern: '^[0-9]{2}-[0-9]{15}$'
+    userId:
+      $ref: '#/userId'
     username:
       type: string
-      description: Имя пользователя
-      example: v.pupkin
+      description: Имя пользователя в стороннем сервисе.
+      example: И.Иванов
     password:
       type: string
-      description: Пароль
+      description: Пароль пользователя в стороннем сервисе.
       example: superpassword
     customField:
       $ref: '#/registerFormData/properties/customField'
@@ -75,13 +63,8 @@ trialStarted:
             - month
             - year
           default: day
-        userUuid:
-          type: string
-          description: |
-            **Важно:** Параметр `userUuid` к августу будет заменён на параметр `userId`. Используйте новое наименование параметра.
-
-            Идентификатор пользователя в облаке Эвотор.
-          pattern: '^[0-9]{2}-[0-9]{15}$'
+        userId:
+          $ref: '#/userId'
         tariffId:
           type: string
           description: Код тарифа, для которого активирован пробный период.
