--- a/paths.yaml
+++ b/paths.yaml
@@ -931,6 +931,11 @@
        Облако выполняет попытки передать события в течение трёх суток, до тех пор пока не будет получен ответ об успешной доставке сообщения (200ОК).
 
        Интервал повторной отправки события около одной минуты.
+
+       Если ваше приложение распространяется за разовые платежи, а не по подписке, Облако Эвотор передаёт только следующие события:
+       * `SubscriptionCreated` – новая подписка. Сообщает о том, что пользователь установил приложение в Личном кабинете. Приходит в начале пробного периода или перед сообщением об успешной оплате, если пробного периода нет.
+       * `SubscriptionActivated` – подписка активирована. Сообщает об успешной оплате. SubscriptionCreated, если пробного периода нет.
+       * `SubscriptionTerminated` – Подписка завершена. Приходит если не прошла регулярная оплата, независимо от того запросил пользователь завершение подписки или нет.
     parameters:
       - $ref: './parameters.yaml#/clientAuth'
       - in: body
