Revert "subscription events clarified"
This reverts commit 896c8bf1942202f79ddd6b5ec2b70c25e99053b0.

--- a/definitions.yaml
+++ b/definitions.yaml
@@ -129,13 +129,13 @@ SubscriptionRenewed:
 
 
 SubscriptionTerminated:
-  description: Подписка завершена. Прихоит, если не прошла регулярная оплата, независимо от того запросил пользователь завершение подписки или нет.
+  description: Подписка завершена.
   allOf:
     - $ref: '#/events'
     - type: object
 
 SubscriptionTerminationRequested:
-  description: Пользователь отправил запрос на завершение подписки (удалил приложение из Личного кабинета). Пользователь может возобновить подписку до окончания оплаченного периода.
+  description: Запрос на завершение подписки.
   allOf:
     - $ref: '#/events'
     - type: object
@@ -1117,12 +1117,12 @@ events:
     type:
       description: |
         Типы событий:
-          * `SubscriptionCreated` – новая подписка. Сообщает о том, что пользователь установил приложение в Личном кабинете. Приходит в начале пробного периода или перед сообщением об успешной оплате, если пробного периода нет.
-          * `SubscriptionActivated` – подписка активирована. Сообщает об успешной оплате.
-          * `SubscriptionRenewed` – подписка продлена на следующий период. Сообщает об успешной оплате очередного периода.
+          * `SubscriptionCreated` – новая подписка. Приходит при начале пробного периода или перед событием *SubscriptionActivated*, если пробного периода нет.
+          * `SubscriptionActivated` – подписка активирована. Приходит по окончанию пробного периода или после события *SubscriptionCreated*, если пробного периода нет.
+          * `SubscriptionRenewed` – подписка продлена на следующий период.
+          * `SubscriptionTerminated` – подписка завершена.
+          * `SubscriptionTerminationRequested` – запрос на завершение.
           * `SubscriptionTermsChanged` – изменились условия подписки, например, тарифный план или количество устройств.
-          * `SubscriptionTerminationRequested` – Пользователь отправил запрос на завершение подписки (удалил приложение из Личного кабинета). Пользователь может возобновить подписку до окончания оплаченного периода.
-          * `SubscriptionTerminated` – Подписка завершена. Приходит если не прошла регулярная оплата, независимо от того запросил пользователь завершение подписки или нет.
       type: string
 
 
